web/book/tests/examples/snapshots/examples__book__transforms__join__examples__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\njoin side:left positions (employees.id==positions.employee_id)\n"
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  LEFT JOIN positions ON employees.id = positions.employee_id

