web/book/tests/examples/snapshots/examples__book__transforms__join__examples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\njoin side:left p=positions (employees.id==p.employee_id)\n"
---
SELECT
  employees.*,
  p.*
FROM
  employees
  LEFT JOIN positions AS p ON employees.id = p.employee_id

